// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data Selection Reducer should set dataset state when dispatching setDataset 1`] = `
Object {
  "dataset": "foobar",
}
`;

exports[`Data Selection Reducer should set geometryFilter state when dispatching setGeometryFilter 1`] = `
Object {
  "geometryFilter": Array [
    Object {
      "filter": "foo",
    },
  ],
}
`;

exports[`Data Selection Reducer should set isLoading, authError, errorMessage, dataset, results, markers state when dispatching receiveDataSelectionFailure 1`] = `
Object {
  "authError": false,
  "dataset": undefined,
  "errorMessage": "error message",
  "isLoading": false,
  "markers": Array [],
  "results": Object {},
}
`;

exports[`Data Selection Reducer should set isLoading, markers state when dispatching fetchDataSelection 1`] = `
Object {
  "isLoading": true,
  "markers": Array [],
}
`;

exports[`Data Selection Reducer should set isLoading, markers, errorMessage, authError, data state when dispatching receiveDataSelectionSuccess 1`] = `
Object {
  "authError": false,
  "data": Object {
    "some": "data",
  },
  "errorMessage": "",
  "isLoading": false,
  "markers": Array [],
}
`;

exports[`Data Selection Reducer should set markers, isLoading state when dispatching setMarkers 1`] = `
Object {
  "isLoading": false,
  "markers": Array [
    Object {
      "markers": Array [],
    },
  ],
}
`;

exports[`Data Selection Reducer should set page state when dispatching setPage 1`] = `
Object {
  "page": 1,
}
`;

exports[`Data Selection Reducer should set view state when dispatching setView 1`] = `
Object {
  "view": "map",
}
`;

exports[`Data Selection Reducer when a route type is dispatched should set dataset and an object from getStateFromQuery if meta.query is set 1`] = `
Object {
  "dataset": "bag",
  "foo": "bar",
}
`;

exports[`Data Selection Reducer when a route type is dispatched should set the dataset and view if meta.query is not set 1`] = `
Object {
  "dataset": "hr",
  "view": "TABLE",
}
`;
